# co2mini-to-redis

./: .gitignore  Cargo.poml  Cargo.toml  README.md  deploy.sh  pom.xml
src/: co2mini.rs  hidapi.rs  main.rs
