[package]
name = "co2mini-to-redis"
version = "1.0.0-SNAPSHOT"
authors = ["Bernd Vogt <bernd.vogt@sourcepit.org>"]

[profile.release]
debug = 1

[dependencies]
clap = { version = "=3.0.5", features = ["derive"] }
common_failures = "=0.1.1"
failure = "=0.1.8"
hidapi = "=1.3.2"
redis = "=0.21.4"
log = "=0.4.14"
stderrlog = "=0.5.1"
